More JVM tuning on Circle CI for SIGKILL debugging